--- a/index.html
+++ b/index.html
@@ -1513,17 +1513,13 @@
                 <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
                 <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
                 <p class="popup__text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    Sed sed risus pretium quam. Aliquam sem et tortor consequat id. Volutpat odio facilisis mauris sit
-                    amet massa vitae. Mi bibendum neque egestas congue. Placerat orci nulla pellentesque dignissim enim
-                    sit. Vitae semper quis lectus nulla at volutpat diam ut venenatis. Malesuada pellentesque elit eget
+                    nulla at volutpat diam ut venenatis. Malesuada pellentesque elit eget
                     gravida cum sociis natoque penatibus et. Proin fermentum leo vel orci porta non pulvinar neque laoreet.
-                    Gravida neque convallis a cras semper. Molestie at elementum eu facilisis sed odio morbi quis. Faucibus
-                    vitae aliquet nec ullamcorper sit amet risus nullam eget. Nam libero justo laoreet sit. Amet massa
+                    Grar sit amet risus nullam eget. Nam libero justo laoreet sit. Amet massa
                     vitae tortor condimentum lacinia quis vel eros donec. Sit amet facilisis magna etiam. Imperdiet sed
                     euismod nisi porta.
                 </p>
-                <a href="https://paystack.com/pay/flybetabook" target="_blank" class="btn btn--green">Book now</a>
+                <a href="https://paystack.com/pay/flybetabook" class="btn btn--white">Book now</a>
             </div>
         </div>
     </div>
