--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       <link href="css/mdb.min.css" rel="stylesheet">
       <!-- Your custom styles (optional) -->
       <link rel="canonical" href="https://mdbootstrap.com/javascript/carousel/">
-    
       <link href="css/style.min.css" rel="stylesheet">
         <link href="css/main.css" rel="stylesheet">
       <style type="text/css">
@@ -111,9 +110,9 @@
 
                             <!--Panel 1-->
                             <div class="tab-pane fade in active show" id="panel1011" role="tabpanel"
-                              style=" padding: 20px;">
-                              <form class="ng-pristine ng-valid ng-valid-pattern ng-valid-maxlength" id="flightForm">
-                                <ul class="nav nav-tab md-tabs" id="one_wayANDround_trip">
+                              style="padding: 20px;">
+                              <form id="flightForm">
+                                <ul class="nav nav-tab md-tabs">
                                   <li class="nav-item">
                                     <a class="nav-link black-text waves-effect waves-light active show"
                                       data-toggle="tab" href="#panel1" role="tab" id="one_way">One Way</a>
@@ -122,27 +121,24 @@
                                     <a class="nav-link waves-light black-text waves-effect waves-light"
                                       data-toggle="tab" href="#panel2" role="tab" id="round_trip">Round Trip</a>
                                   </li>
-
                                 </ul>
-                                <div class="row panel1011_firstDiv">
+                                <div id="grid" class="flex">
                                   <div class="col-md-3">
                                     <label class="black-text active">Origin</label>
                                     <input type="text" id="originFrom" class="form-control" placeholder="City, Airport"
                                       required>
                                   </div>
                                   <div class="col-md-2">
-                                    <label class="black-text">Destination</label>
+                                    <label class="black-text centerAlign">Destination</label>
 
                                     <input type="text" id="destinationTo"
                                       class="form-control ng-pristine ng-untouched ng-valid ng-empty ng-valid-maxlength"
                                       placeholder="City, Airport" required>
                                   </div>
                                   <div class="col-md-3">
-
                                     <label class="black-text">Departing</label>
                                     <input placeholder="Selected date" type="date" id="departing-date-picker"
                                       class="form-control datepicker" style="padding: 5px 0 5px 12px;">
-
                                   </div>
                                   <div class="tab-content">
 
@@ -157,9 +153,8 @@
 
                                   </div>
                                 </div>
-                                <div class="row belowDiv">
-
-                                  <div class="col-md-3" style="padding-left: 3px;    padding-right: 5px;">
+                                <div style="display: flex;justify-content: center;" class="belowDiv">
+                                  <div class="col-md-3">
                                     <label class="black-text active">Adults</label>
                                     <select class="mdb-select ng-pristine ng-untouched ng-valid ng-empty"
                                       autocomplete="on" style=" border: 1px solid #ced4da;
@@ -182,13 +177,15 @@
                                       </option>
                                     </select>
                                   </div>
-                                  <div class="col-md-2" style="padding-left: 5px; padding-right: 5px;">
-                                    <label class="black-text">Children</label>
-                                    <select class="mdb-select ng-pristine ng-untouched ng-valid ng-empty"
-                                      autocomplete="on" style=" border: 1px solid #ced4da;
-                                                    border-radius: .25rem;
-                                                    height: 40px;" id="childrenNumber">
-                                      <option selected="selected">0</option>
+
+                                  <div class="col-md-3">
+                                    <label class="black-text active">Children</label>
+                                    <select class="mdb-select ng-pristine ng-untouched ng-valid ng-empty" autocomplete="on" style=" border: 1px solid #ced4da;
+                                                                                      border-radius: .25rem; 
+                                                                                      height: 40px;" id="childrenNumber">
+                                      <option selected="selected">
+                                        0
+                                      </option>
                                       <option>
                                         1
                                       </option>
@@ -201,34 +198,30 @@
                                       <option>
                                         4
                                       </option>
-                                      <option>
-                                        5
-                                      </option>
                                     </select>
                                   </div>
-                                  <div class="col-md-2" style="padding-left: 5px; padding-right: 0px;">
-                                    <label class="black-text active classtype_text">Class Type</label>
-                                    <select class="mdb-select ng-pristine ng-untouched ng-valid ng-empty"
-                                      autocomplete="on" style=" border: 1px solid #ced4da;
-                                                    border-radius: .25rem;
-                                                    height: 40px;" id="classType">
+
+                                  <div class="col-md-3">
+                                    <div style="display: flex;">
+                                    <label style="margin-top: 8px;" class="black-text active">Class type</label>
+                                    <select class="mdb-select" autocomplete="on" style=" border: 1px solid #ced4da;
+                                                                                      border-radius: .25rem; 
+                                                                                      height: 40px;" id="classType">
                                       <option selected="selected">
+                                        Business Economy
+                                      </option>
+                                      <option>
+                                        Economy
+                                      </option>
+                                      <option>
                                         First Class
                                       </option>
-                                      <option>
-                                        Business First Class
-                                      </option>
-                                      <option>
-                                        Economy Class
-                                      </option>
-
                                     </select>
+                                    </div>
                                   </div>
-                                  <div class="col-12">
-
-                                    <button class="btn btn-warning waves-effect waves-light mt-4"
-                                      id="flight_saveAndBook">Save and Book Hotel</button>
-                                  </div>
+                                </div>
+                                <div class="col-12">
+                                  <button class="btn btn-warning waves-effect waves-light mt-4" id="flight_saveAndBook">Save and Book Hotel</button>
                                 </div>
                               </form>
 
