flight tab headings positioned inline

--- a/index.html
+++ b/index.html
@@ -125,14 +125,14 @@
                                 <div id="grid" class="flex">
                                   <div class="col-md-3">
                                     <label class="black-text active">Origin</label>
-                                    <input type="text" id="originFrom" class="form-control" placeholder="City, Airport"
+                                    <input type="text" id="originFrom" class="form-control centered" placeholder="City, Airport"
                                       required>
                                   </div>
                                   <div class="col-md-2">
-                                    <label class="black-text centerAlign">Destination</label>
+                                    <label class="black-text">Destination</label>
 
                                     <input type="text" id="destinationTo"
-                                      class="form-control ng-pristine ng-untouched ng-valid ng-empty ng-valid-maxlength"
+                                      class="form-control centered"
                                       placeholder="City, Airport" required>
                                   </div>
                                   <div class="col-md-3">
@@ -153,10 +153,10 @@
 
                                   </div>
                                 </div>
-                                <div style="display: flex;justify-content: center;" class="belowDiv">
+                                <div style="display: flex;justify-content: center;" class="belowDiv flex unflex">
                                   <div class="col-md-3">
                                     <label class="black-text active">Adults</label>
-                                    <select class="mdb-select ng-pristine ng-untouched ng-valid ng-empty"
+                                    <select class="mdb-select "
                                       autocomplete="on" style=" border: 1px solid #ced4da;
                                                     border-radius: .25rem; 
                                                     height: 40px;" id="adultNumber">
@@ -180,7 +180,7 @@
 
                                   <div class="col-md-3">
                                     <label class="black-text active">Children</label>
-                                    <select class="mdb-select ng-pristine ng-untouched ng-valid ng-empty" autocomplete="on" style=" border: 1px solid #ced4da;
+                                    <select class="mdb-select" autocomplete="on" style=" border: 1px solid #ced4da;
                                                                                       border-radius: .25rem; 
                                                                                       height: 40px;" id="childrenNumber">
                                       <option selected="selected">
