added signin and signup

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
       <div class="logo">
           <a href="#"><img src="img/logo.png" width="170px" alt="Flybeta logo"></a>       
       </div>
-        <div class="nav_btn">        
+        <!-- <div class="nav_btn">        
           <button type="button" class="btn btn-sm btn-outline-warning waves-effect waves-light">Register</button>
-          <button type="button" class="btn btn-sm btn-outline-warning waves-effect waves-light">Sign In</button>            
-        </div>     
+          <button type="button" class="btn btn-sm btn-outline-warning waves-effect waves-light"><a href='signin.html'>Sign In</a></button>            
+        </div>      -->
       </div>       
     </nav>
 
