hard-coded signin

--- a/signin.html
+++ b/signin.html
@@ -28,7 +28,7 @@
                         <li><a class="header-link" href="index.html">Home</a></li>
                         <li><a class="header-link" href="#">About</a></li>
                         <li><a class="header-link" href="#">Book Travel</a></li>
-                        <li><a class="btn btn-outline-primary" href="index.html">Sign in</a></li>
+                        <li><a class="btn btn-outline-primary" href="signup.html">Register</a></li>
                     </ul>
                 </nav>
             </div>
