--- a/index.html
+++ b/index.html
@@ -1518,7 +1518,7 @@
               <a id="footer-link-faq" href="#" class="orange-text"></a>
             </h4>
             <h4 class="pt-2">
-              <a id="footer-link-browsers" href="#" class="orange-text">support@flybeta.com</a>
+              <a id="footer-link-browsers" href="#" class="orange-text">support</a>
             </h4>
             <p>
               <a id="footer-link-license" href="#">24/7 Dedicated Customer Support</a>
